<resources>
    <string name="app_name">跑者荣耀</string>
    <string name="sport">运动</string>
    <string name="circle">跑友圈</string>
    <string name="posture">跑姿</string>
    <string name="mine">我的</string>
    <string name="code_send">%1$ds</string>
    <string name="weight_management">体重管理</string>
    <string name="training_to_remind">训练提醒</string>
    <string name="my_dynamic">我的动态</string>
    <string name="day_walk">日均步数</string>
    <string name="total_consumption">总消耗(大卡)</string>
    <string name="total_km">总里程(公里)</string>
    <string name="click_to_edit">点击编辑个人资料</string>
    <string name="third_author">第三方接入</string>
    <string name="click_drag">点击更换图片，拖拽可更改排序，共8张</string>
    <string name="name_avatar">头像</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="birth">出生年月</string>
    <string name="location">所在地</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="safety_confirm">为保证账号安全，请验证身份</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="idoc_loading">加载中...</string>
    <string name="idoc_pull_loading_more">上拉加载更多...</string>
    <string name="has_send">短信验证码已发送至%1$s请注意查收</string>
    <string name="seconds_send_again">%1$d秒可重新获取</string>
    <string name="attention">关注</string>
    <string name="attention_on">已关注</string>
    <string name="attention_cancel">取消关注</string>
    <string name="fans">粉丝</string>
    <string name="collect">收藏</string>
    <string name="user">用户</string>
    <string name="circle_zi">圈子</string>
    <string name="healthy_life">健康生活</string>
    <string name="exercise_time">累计健身(分钟)</string>
    <string name="ride_distance">累计骑行(公里)</string>
    <string name="run_distance">跑步公里(公里)</string>
    <string name="kilocalorie">大卡</string>
    <string name="walk">健走</string>
    <string name="run">跑步</string>
    <string name="sport_finish">运动完成</string>
    <string name="exercise">健身</string>
    <string name="ride">骑行</string>
    <string name="share_record">分享战绩</string>
    <string name="register">注册</string>
    <string name="start_run">开始跑步</string>
    <string name="start_ride">开始骑行</string>
    <string name="start_exercise">开始健身</string>
    <string name="speed">配速</string>
    <string name="km">公里</string>
    <string name="save">保存</string>
    <string name="forget_pwd">手机找回密码</string>
    <string name="new_register">新用户注册</string>
    <string name="avatar_nickname">完善个人资料</string>
    <string name="notify">通知</string>
    <string name="safetyconfirm">安全验证</string>
    <string name="input_code">请输入验证码</string>
    <string name="modify_pwd">修改密码</string>
    <string name="edit_info">编辑资料</string>
    <string name="permission_phone">请打开当前应用拨打电话的使用权限</string>
    <string name="permission_camera_storage">请打开当前应用打开相机和读写的使用权限</string>
    <string name="permission_camera_storage_audio">请打开当前应用打开相机、读写和录音的使用权限</string>
    <string name="permission_phone_storage">请打开当前应用的获取手机唯一标识和读写的使用权限</string>
    <string name="permission_location">请打开当前应用定位的使用权限</string>
    <string name="permission_record_audio">请打开当前应用麦克风的使用权限</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="picture_taken">Picture taken</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入登录密码</string>
    <string name="login">登录</string>
    <string name="forget">忘记密码？</string>
    <string name="register_new">新用户注册</string>
    <string name="third_login">第三方登录</string>
    <string name="phone">手机号</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="new_pwd">新密码</string>
    <string name="input_new_pwd_length">请输入6-16位新密码</string>
    <string name="commit">提交</string>
    <string name="pwd">密码</string>
    <string name="setting_avatar">设置个人头像</string>
    <string name="nickname">昵称</string>
    <string name="nickname_less_than_16">昵称长度不超过16位</string>
    <string name="water_mark_camera">水印相机</string>
    <string name="sports_a_novice">运动新手</string>
    <string name="today_steps">今日步数</string>
    <string name="step">步</string>
    <string name="have_walk">已走%1$s公里</string>
    <string name="have_consume">消耗%1$s大卡</string>
    <string name="have_climb">相当于爬了%1$d层楼</string>
    <string name="open_camera">打开照相机</string>
    <string name="open_picture">从手机相册获取</string>
    <string name="share_to">分享到</string>
    <string name="weixin">微信</string>
    <string name="friend_circle">跑友圈</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="choose_shoe">去选择跑鞋</string>
    <string name="record_data">搭配智能跑鞋能精确记录跑步数据</string>
    <string name="in_run">室内跑</string>
    <string name="out_run">户外跑</string>
    <string name="china_woman_voice">国语女声</string>
    <string name="china_man_voice">国语男声</string>
    <string name="voice_type">语音类型</string>
    <string name="start_soon">马上开始</string>
    <string name="follow_coach">跟教练来一段热身吧</string>
    <string name="warm_up">热身有助于防止运动损伤哦</string>
    <string name="time_length">时长</string>
    <string name="consumption">消耗(大卡)</string>
    <string name="sport_target">运动目标:%1$s</string>
    <string name="right_to_suspend">向右滑动暂停</string>
    <string name="finish">结束</string>
    <string name="go_on">继续</string>
    <string name="act">动作介绍</string>
    <string name="down_percent">下载中(50%)</string>
    <string name="location_permission_denied">请打开当前应用获取当前位置的权限</string>
    <string name="finish_not_done">目标未达成</string>
    <string name="finish_done">目标达成</string>
    <string name="keep_trying">不要灰心，继续努力</string>
    <string name="continue_todo">你太棒了，继续保持</string>
    <string name="ok">好的</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="recommended_strategy">推荐攻略</string>
    <string name="train_remind">训练提醒</string>
    <string name="add_remind">添加提醒</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="task_at_last_one_day">至少选择一天</string>
    <string name="remind_setting">提醒设置</string>
    <string name="remind_time">提醒时间</string>
    <string name="delete_remind">删除提醒</string>
    <string name="delete">删除</string>
    <string name="exercise_video">健身视频</string>
    <string name="goal_finish">目标达成</string>
    <string name="steps">步数</string>
    <string name="kcal">消耗</string>
    <string name="data_statistics">数据统计</string>
    <string name="hot">热门</string>
    <string name="hot_circle">热门圈子</string>
    <string name="latest">最新</string>
    <string name="unit_week"> 周 </string>
    <string name="unit_month"> 月 </string>
    <string name="my_attention_circle">我关注的圈子</string>
    <string name="view_all">查看全部</string>
    <string name="video">视频</string>
    <string name="text">文字</string>
    <string name="picture">图片</string>
    <string name="add_picture">添加图片</string>
    <string name="add_video">添加视频</string>
    <string name="add_circle">+添加圈子</string>
    <string name="add_circle_no_add">添加圈子</string>
    <string name="publish_content">发布内容</string>
    <string name="publish">发布</string>
    <string name="no_circle">暂无圈子</string>
    <string name="hint">提示</string>
    <string name="sure_to_delete">确认删除吗？</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="send">发送</string>
    <string name="details">详情</string>
    <string name="pub_comment">发布评论</string>
    <string name="done">完成</string>
    <string name="upload_success">上传成功</string>
    <string name="success">成功</string>
    <string name="deny">否定</string>
    <string name="unsupported">不支持的</string>
    <string name="unknown">不明原因</string>
    <string name="total_time">总计时间</string>
    <string name="speed_details">配速详情</string>
    <string name="walk_analysis">走姿分析</string>
    <string name="run_analysis">跑姿分析</string>
    <string name="connect">连接跑鞋</string>
    <string name="teach">教程</string>
    <string name="position">定位</string>
    <string name="my_shoes">我的跑鞋</string>
    <string name="connecting">绑定中</string>
    <string name="remove_bind">解除绑定</string>
    <string name="change_name">变更名称</string>
    <string name="exit">退出登录</string>
    <string name="edit">编辑</string>
    <string name="sport_detail">运动详情</string>
    <string name="walk_music">步频音乐</string>
    <string name="add_shoes">添加跑鞋</string>
    <string name="normal_posture">正常跑姿</string>
    <string name="half_sole">前掌</string>
    <string name="mid_leg">中足</string>
    <string name="heelpiece">后跟</string>
    <string name="foot_in">足内翻</string>
    <string name="foot_out">足外翻</string>
    <string name="normal">正常</string>
    <string name="cm">厘米</string>
    <string name="bei">倍</string>
    <string name="sure_relieve">确定解绑</string>
    <string name="title_activity_foot_land_mode">FootLandModeActivity</string>
    <string name="unknown_device">未知设备</string>
    <string name="ble_not_supported">你的手机不支持BLE</string>
    <string name="error_bluetooth_not_supported">你的手机不支持蓝牙</string>
</resources>
