<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_3">

    <ImageView
        android:id="@+id/iv_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="6dp"
        android:scaleType="fitXY" />

    <LinearLayout
        android:id="@+id/ly_right"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="6dp"
        android:background="@color/bg_bf000000"
        android:orientation="vertical">

        <TextView
            android:layout_width="78dp"
            android:layout_height="22dp"
            android:background="@drawable/tv_share_record_bg"
            android:gravity="center"
            android:text="@string/sports_a_novice"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:layout_marginTop="58dp"
            android:text="@string/today_steps"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_14" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9902"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size_45" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:layout_marginTop="64dp"
            android:text="@string/have_walk"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_kcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:layout_marginTop="19dp"
            android:text="@string/have_consume"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:visibility="invisible"
            android:layout_marginTop="4dp"
            android:text="@string/have_climb"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/text_color_32"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_16" />

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/yellow_btn_shallow"
            android:text="@string/sure"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <com.king.run.view.ScripView
        android:id="@+id/scrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />
</RelativeLayout>
