<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_color">

    <include
        android:id="@+id/toolbar"
        layout="@layout/title_bar" />

    <TextView
        android:id="@+id/tv_has_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/has_send"
        android:textSize="@dimen/text_size_18" />

    <com.king.run.view.VerifycationCodeView
        android:id="@+id/verifycation_code_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_has_send"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btn_sure"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@+id/verifycation_code_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/yellow_shallow"
        android:text="@string/sure" />

    <TextView
        android:id="@+id/tv_seconds_send_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sure"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/seconds_send_again" />
</RelativeLayout>
