<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/toolbar"
        layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp" />

            <LinearLayout
                android:id="@+id/ly_right"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="78dp"
                    android:layout_height="22dp"
                    android:background="@drawable/tv_share_record_bg"
                    android:gravity="center"
                    android:text="@string/sports_a_novice"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/text_size_12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16.5dp"
                    android:layout_marginTop="58dp"
                    android:text="@string/today_steps"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/text_size_14" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16.5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_step"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9902"
                        android:textColor="@color/white_color"
                        android:textSize="@dimen/text_size_45" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/step"
                        android:textColor="@color/white_color"
                        android:textSize="@dimen/text_size_12" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16.5dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/have_walk"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:id="@+id/tv_kcal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16.5dp"
                    android:layout_marginTop="19dp"
                    android:text="@string/have_consume"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16.5dp"
                    android:layout_marginTop="4dp"
                    android:visibility="invisible"
                    android:text="@string/have_climb"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <com.king.run.view.HorizontalListView
                android:id="@+id/hor_lv"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/iv_big"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="30dp" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hor_lv"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="37dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/common_btn_click"
                android:text="@string/share_record" />
        </RelativeLayout>
    </ScrollView>
    <com.king.run.view.ScripView
        android:id="@+id/scrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />
</RelativeLayout>